tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/direct-new-newexpression.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/new-newexpression.case
// - src/assignment-target-type/invalid/direct.template
/*---
description: Static Semantics AssignmentTargetType, Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment

    new NewExpression
    Static Semantics AssignmentTargetType, Return invalid.

---*/

$DONOTEVALUATE();

new f = 1;
